# university

sem-01/informatics/: khisraw.odt
sem-01/informatics/03/: factorial_logic.lsp  factorial_structural.c  functional.lsp  oop.py  structural.c
sem-01/informatics/03_01/: linear_equation.cpp  odd_or_even.cpp  square_root.cpp
sem-01/informatics/03_01/hw/: 02.cpp  03.cpp  05.cpp
sem-01/informatics/04/: readme.md
sem-01/informatics/05/: 01.md  02.md  03.md  04.md
sem-01/informatics/05/hw/: 03.py
sem-01/informatics/06/c++/: 010.cpp  04.cpp  06.cpp  07.cpp  08.cpp  09.cpp
sem-01/informatics/06/python/: 010.py  02.py  04.py  05.py  06.py  07.py  08.py  09.py
sem-01/informatics/07/: main.cpp  readme.md  stack.py
sem-01/informatics/09/AbstractShape/: CMakeLists.txt  main.cpp
sem-01/informatics/09/HW/Dog/: CMakeLists.txt  dog.cpp  dog.h  main.cpp
sem-01/informatics/09/Inheritance/: CMakeLists.txt  main.cpp
sem-01/informatics/09/calculator/: readme.md
sem-01/informatics/09/module5-1/: CMakeLists.txt  abstracttransport.cpp  abstracttransport.h  bicycle.cpp  bicycle.h  car.cpp  car.h  main.cpp
sem-01/informatics/CalculatorGUI/: CalculatorGUI.pro  calculatorgui.cpp  calculatorgui.h  calculatorgui.ui  khisraw-1.odt
sem-01/informatics/Matrix/: main.cpp  matrix.cpp  matrix.h
sem-01/informatics/c++ and python/: main.py  makefile
sem-01/informatics/c++ and python/inc/: arr_operation.h
sem-01/programming-in-python/tasks/: Модуль №1. Операторы ввода-вывода.ipynb  Модуль №2. Числа.ipynb  Модуль №3. Строки.ipynb  Модуль №4. Ветвление.ipynb
(+2 files in other folders)
